# ljt

./: .gitignore  01-项目概述与后端API-登录用户集市模块.md  02-后端API-活动动态通知AI模块.md  03-后端Service层与管理后台API.md  04-前端页面-登录用户中心集市模块.md  05-前端页面-活动动态管理后台与数据库设计.md  06-数据库表结构与中间件部署指南.md  07-应用部署与核心技术实现总结.md  AGENTS.md  AI助手改进计划-第1部分.md  AI助手改进计划-第2部分.md  AI助手改进计划-第3部分.md  AI助手知识库系统-Phase2向量检索实现说明.md  AI助手知识库系统实现进度.md  WIKI.md  aaljt.sql  docker-compose.minio.yml  es mapping设计.txt  search_products接口协议.txt  tmp-w13-live-actions.ps1  tmp-w13-live-check.ps1  tmp_write_test.py  同步写入规则草案.txt  智能检索设计文档.txt  结合 LangChain  LangGraph 后的总体架构设计说明.txt
front-admin/: index.html  package-lock.json  package.json  (+1 more)
python/: README.md  pyproject.toml
python/query_parser_langchain/: __init__.py  action_review_models.py  action_review_service.py  api.py  config.py  models.py  prompt.py  response_composer_models.py  response_composer_service.py  rule_fallback.py  service.py  tool_router_models.py  tool_router_service.py
python/tests/: test_action_review_service.py  test_api.py  test_response_composer_service.py  test_rule_fallback.py  test_service.py  test_tool_router_service.py
python/tools/diagram_generators/: README.md  generate_access_business_notification_architecture_drawio.py  generate_backend_api_model_branch_flow_drawio.py  generate_backend_api_tool_flow_drawio.py  generate_chen_er_drawio.py  generate_class_drawio_from_mmd.py  generate_experiment_validation_flow_drawio.py  generate_flow_drawio.py  generate_frontend_backend_infra_architecture_drawio.py  generate_notification_architecture_drawio.py
(+640 files in other folders)
