[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-parser-langchain"
version = "0.1.0"
description = "Python intelligent-search sidecar."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.8,<3",
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.3,<0.4",
  "langgraph>=0.3,<0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["query_parser_langchain*"]
